--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* -------------------- BASE -------------------- */
+/* ---------- BASE ---------- */
 html {
   scroll-behavior: smooth;
 }
@@ -11,13 +11,37 @@ body {
   @apply bg-zinc-900 text-zinc-50;
 }
 
-/* -------------------- UTILITIES -------------------- */
+/* ---------- TYPOGRAPHY ---------- */
+.headline-1 {
+  @apply max-w-max;
+  background: -webkit-linear-gradient(0deg, #fafafa, #a1a1a1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.headline-1 {
+  @apply text-5xl leading-tight font-semibold lg:text-[55px] lg:leading-[1.15]
+}
+
+/* ---------- UTILITIES ---------- */
 .material-symbols-rounded {
   @apply w-[1em] h-[1em] overflow-hidden;
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
-/* -------------------- COMPONENTS -------------------- */
+.container {
+  @apply px-4 mx-auto lg:px-8 xl:max-w-6xl;
+}
+
+.img-box {
+  @apply bg-zinc-700 overflow-hidden;
+}
+
+.img-cover {
+  @apply w-full h-full object-cover
+}
+
+/* ---------- COMPONENTS ---------- */
 /* Menu Btn */
 .menu-btn {
   @apply w-10 h-10 grid place-items-center bg-zinc-50/10 rounded-xl ring-inset ring-1 ring-zinc-50/[0.02] backdrop-blur-2xl hover:bg-zinc-50/15 transition-[transform,background-color] active:scale-95;
@@ -49,6 +73,22 @@ body {
   @apply max-w-max h-9 flex items-center gap-2 px-4 rounded-xl font-medium text-sm ring-1 ring-zinc-50/5 ring-inset transition-[background-color];
 }
 
+.btn-primary {
+  @apply h-11 bg-sky-400 text-zinc-950 hover:bg-sky-300 active:bg-sky-400
+}
+
+.btn .material-symbols-rounded {
+  @apply text-[18px]
+}
+
+.btn:has(.material-symbols-rounded) {
+  @apply pr-3
+}
+
 .btn-secondary {
   @apply bg-zinc-50 text-zinc-900 active:bg-zinc-50/80
+}
+
+.btn-outline {
+  @apply h-11 bg-zinc-800 hover:bg-zinc-700 active:bg-zinc-800
 }
