--- a/src/index.css
+++ b/src/index.css
@@ -21,15 +21,15 @@ body {
 }
 
 .headline-1 {
-  @apply text-5xl leading-tight font-semibold lg:text-[55px] lg:leading-[1.15]
+  @apply text-5xl leading-tight font-semibold lg:text-[55px] lg:leading-[1.15];
 }
 
 .headline-2 {
-  @apply text-3xl lg:text-4xl lg:leading-tight font-semibold
+  @apply text-3xl lg:text-4xl lg:leading-tight font-semibold;
 }
 
 .title-1 {
-  @apply text-[22px] font-normal
+  @apply text-[22px] font-normal;
 }
 
 /* ---------- UTILITIES ---------- */
@@ -47,11 +47,11 @@ body {
 }
 
 .img-cover {
-  @apply w-full h-full object-cover
+  @apply w-full h-full object-cover;
 }
 
 .section {
-  @apply pt-20 lg:pt-32
+  @apply pt-20 lg:pt-32;
 }
 
 /* ---------- COMPONENTS ---------- */
@@ -74,11 +74,11 @@ body {
 }
 
 .nav-link.active {
-  @apply text-zinc-900 duration-500
+  @apply text-zinc-900 duration-500;
 }
 
 .navbar .active-box {
-  @apply absolute bg-zinc-50 rounded-lg -z-10 transition-[top,left] duration-500
+  @apply absolute bg-zinc-50 rounded-lg -z-10 transition-[top,left] duration-500;
 }
 
 /* Button */
@@ -87,21 +87,34 @@ body {
 }
 
 .btn-primary {
-  @apply h-11 bg-sky-400 text-zinc-950 hover:bg-sky-300 active:bg-sky-400
+  @apply h-11 bg-sky-400 text-zinc-950 hover:bg-sky-300 active:bg-sky-400;
 }
 
 .btn .material-symbols-rounded {
-  @apply text-[18px]
+  @apply text-[18px];
 }
 
 .btn:has(.material-symbols-rounded) {
-  @apply pr-3
+  @apply pr-3;
 }
 
 .btn-secondary {
-  @apply bg-zinc-50 text-zinc-900 active:bg-zinc-50/80
+  @apply bg-zinc-50 text-zinc-900 active:bg-zinc-50/80;
 }
 
 .btn-outline {
-  @apply h-11 bg-zinc-800 hover:bg-zinc-700 active:bg-zinc-800
+  @apply h-11 bg-zinc-800 hover:bg-zinc-700 active:bg-zinc-800;
+}
+
+/* Text Field */
+.label {
+  @apply block text-zinc-200 text-sm font-normal mb-2;
+}
+
+.text-field {
+  @apply block outline-none w-full px-3 py-3 text-sm bg-zinc-800 rounded-xl ring-1 ring-inset ring-transparent transition-shadow hover:ring-zinc-50/5 focus:ring-sky-400 focus:ring-2
+}
+
+.text-field::placeholder {
+  @apply text-zinc-400;
 }
