--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,10 @@ body {
   @apply pt-20 lg:pt-32;
 }
 
+.reveal-up {
+  @apply translate-y-20 opacity-0
+}
+
 /* ---------- COMPONENTS ---------- */
 /* Menu Btn */
 .menu-btn {
